Prevent import container from collapsing

--- a/public/assets/css/_start.css
+++ b/public/assets/css/_start.css
@@ -2,6 +2,7 @@
 .start__import {
   display: flex;
   flex-flow: row wrap;
+  flex-shrink: 0;
   padding: 1rem 0 0 1rem;
 }
 
